ecmascript/parser/tests/test262-error-references/fail/9fc6ddfbb0f1cbe3.js.stderr
error: Unexpected token Some(Dot)
 --> $DIR/tests/test262-parser/fail/9fc6ddfbb0f1cbe3.js:1:6
  |
1 | f(....a)
  |      ^

